; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_time.c_sys_nanosleep.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_time.c_sys_nanosleep.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timespec_ = type { i32, i32 }
%struct.timespec = type { i32, i32 }

@_EFAULT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"nanosleep({%d, %d}, 0x%x\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_nanosleep(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.timespec_, align 4
  %7 = alloca %struct.timespec, align 4
  %8 = alloca %struct.timespec, align 4
  %9 = alloca %struct.timespec_, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = bitcast %struct.timespec_* %6 to i64*
  %12 = load i64, i64* %11, align 4
  %13 = call i64 @user_get(i32 %10, i64 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* @_EFAULT, align 4
  store i32 %16, i32* %3, align 4
  br label %53

17:                                               ; preds = %2
  %18 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %6, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %6, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 @STRACE(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %19, i32 %21, i32 %22)
  %24 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %6, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = getelementptr inbounds %struct.timespec, %struct.timespec* %7, i32 0, i32 1
  store i32 %25, i32* %26, align 4
  %27 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %6, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = getelementptr inbounds %struct.timespec, %struct.timespec* %7, i32 0, i32 0
  store i32 %28, i32* %29, align 4
  %30 = call i64 @nanosleep(%struct.timespec* %7, %struct.timespec* %8)
  %31 = icmp slt i64 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %17
  %33 = call i32 (...) @errno_map()
  store i32 %33, i32* %3, align 4
  br label %53

34:                                               ; preds = %17
  %35 = load i32, i32* %5, align 4
  %36 = icmp ne i32 %35, 0
  br i1 %36, label %37, label %52

37:                                               ; preds = %34
  %38 = getelementptr inbounds %struct.timespec, %struct.timespec* %8, i32 0, i32 1
  %39 = load i32, i32* %38, align 4
  %40 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %9, i32 0, i32 1
  store i32 %39, i32* %40, align 4
  %41 = getelementptr inbounds %struct.timespec, %struct.timespec* %8, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = getelementptr inbounds %struct.timespec_, %struct.timespec_* %9, i32 0, i32 0
  store i32 %42, i32* %43, align 4
  %44 = load i32, i32* %5, align 4
  %45 = bitcast %struct.timespec_* %9 to i64*
  %46 = load i64, i64* %45, align 4
  %47 = call i64 @user_put(i32 %44, i64 %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %51

49:                                               ; preds = %37
  %50 = load i32, i32* @_EFAULT, align 4
  store i32 %50, i32* %3, align 4
  br label %53

51:                                               ; preds = %37
  br label %52

52:                                               ; preds = %51, %34
  store i32 0, i32* %3, align 4
  br label %53

53:                                               ; preds = %52, %49, %32, %15
  %54 = load i32, i32* %3, align 4
  ret i32 %54
}

declare dso_local i64 @user_get(i32, i64) #1

declare dso_local i32 @STRACE(i8*, i32, i32, i32) #1

declare dso_local i64 @nanosleep(%struct.timespec*, %struct.timespec*) #1

declare dso_local i32 @errno_map(...) #1

declare dso_local i64 @user_put(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
